SigmaCodebackup3rdSep/objects/Subscription_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Subscription__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Line Items</relationshipLabel>
        <relationshipName>Subscription_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration__c</fullName>
        <label>Subscription Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Month</fullName>
                    <label>3 Months</label>
                </value>
                <value>
                    <fullName>6 Month</fullName>
                    <label>6 Months</label>
                </value>
                <value>
                    <fullName>12 Month</fullName>
                    <label>12 Months</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SubscriptionDetail__c</referenceTo>
        <relationshipLabel>Subscription Line Items</relationshipLabel>
        <relationshipName>Subscription_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_charges__c</fullName>
        <label>Total charges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Subscription Line Item</label>
    <nameField>
        <displayFormat>sli{0000}</displayFormat>
        <label>Subscription No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Product</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISPICKVAL(Usage_Type__c, &apos;&apos;)),
   ISBLANK(Product__c)
  )</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Select Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_Duration</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Subscription_Duration__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Subscription_Duration__c</errorDisplayField>
        <errorMessage>Select Duration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_charges</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
ISNULL( Total_charges__c  ), 
 Total_charges__c &lt;= 0 
)</errorConditionFormula>
        <errorDisplayField>Total_charges__c</errorDisplayField>
        <errorMessage>Enter Valid Charges</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_on_quantity</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 (ISBLANK(Quantity__c )), 
NOT(ISBLANK(Product__c))
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Enter Quantity</errorMessage>
    </validationRules>
</CustomObject>